Empty <input type=file> is represented incorrectly in FormData https://bugs.webkit.org/show_bug.cgi?id=185416

Patch by Andreu Botella <andreu@andreubotella.com> on 2021-11-16
Reviewed by Chris Dumez.

LayoutTests/imported/w3c:

* web-platform-tests/html/semantics/forms/form-submission-0/form-data-set-empty-file.window-expected.txt:

Source/WebCore:

When a FormData object is constructed from a form, an empty <input type="file"> control will
be represented as an empty file with an empty filename. According to the HTML spec, this
file must have "application/octet-stream" as its content type. WebKit has the empty string
instead. This change brings WebKit into alignment with the standard and with Firefox and
Chrome in this area.

Tests: imported/w3c/web-platform-tests/html/semantics/forms/form-submission-0/form-data-set-empty-file.window.html

* html/FileInputType.cpp:
(WebCore::FileInputType::appendFormData const):


Canonical link: https://commits.webkit.org/244287@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285861 268f45cc-cd09-0410-ab3c-d52691b4dbfc